--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.6.4",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "google-maps-react": "^2.0.6",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
